[quiz] Rewrite make_questions method to work with a specific number of questions for each tag

--- a/wouso/games/quiz/templates/quiz/cpanel/add_quiz.html
+++ b/wouso/games/quiz/templates/quiz/cpanel/add_quiz.html
@@ -34,5 +34,6 @@
         {% endfor %}
         <a class="btn btn-warning" href="{% url list_quizzes %}">{% trans 'Back' %}</a>
         <button class="btn btn-primary" type="submit">{% trans 'Submit' %}</button>
+        {% csrf_token %}
     </form>
 {% endblock %}
