--- a/wouso/games/quiz/templates/quiz/cpanel/edit_quiz.html
+++ b/wouso/games/quiz/templates/quiz/cpanel/edit_quiz.html
@@ -10,12 +10,29 @@
 {% endblock %}
 
 {% block sectioncontent %}
-     <form method="post" role="form" class="form-horizontal" action="">
-        <table>
-        {{ form|bootstrap_horizontal}}
-        </table>
-        {% csrf_token %}
+    <form class="form-horizontal" method="post">
+        {% for f in form %}
+            {% if "tag_" not in f.name %}
+                <div class="form-group">
+                    <label for="{{f.label}}" class="control-label col-md-2">{{ f.label }}</label>
+                    <div id="{{f.label}}">{{ f|add_css:"form-control col-md-3" }}</div>
+                </div>
+            {% endif %}
+        {% endfor %}
+
+        <hr/>
+
+        <b>{% trans 'Tags' %}</b>
+        {% for f in form %}
+            {% if "tag_" in f.name %}
+                <div class="form-group">
+                    <label for="{{f.label}}" class="control-label col-md-2">{{ f.label }}</label>
+                    <div id="{{f.label}}">{{ f|add_css:"form-control col-md-1" }}</div>
+                </div>
+            {% endif %}
+        {% endfor %}
         <a class="btn btn-warning" href="{% url list_quizzes %}">{% trans 'Back' %}</a>
         <button class="btn btn-primary" type="submit">{% trans 'Submit' %}</button>
+        {% csrf_token %}
     </form>
 {% endblock %}
