[quiz] Fix styling

--- a/wouso/games/quiz/templates/quiz/cpanel/edit_quiz.html
+++ b/wouso/games/quiz/templates/quiz/cpanel/edit_quiz.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 {% load django_bootstrap_breadcrumbs %}
 {% load bootstrap %}
+{% load cpanel %}
 
 {% block breadcrumbs %}
     {{ block.super }}
