code re-factoring

--- a/wouso/games/quiz/templates/quiz/index.html
+++ b/wouso/games/quiz/templates/quiz/index.html
@@ -2,8 +2,13 @@
 
 {% load i18n %}
 
-{% block title %}{% trans 'Quizzes' %}{% endblock %}
-{% block sectiontitle %}{% trans 'Quizzes' %}{% endblock %}
+{% block title %}
+	{% trans 'Quizzes' %}
+{% endblock %}
+
+{% block sectiontitle %}
+	{% trans 'Quizzes' %}
+{% endblock %}
 
 {% block sectioncontent %}
 
