--- a/wouso/resources/templates/site_base.html
+++ b/wouso/resources/templates/site_base.html
@@ -21,7 +21,9 @@
 	<link rel="stylesheet" href="{{ basepath }}/static/css/progress.css">
 	<link rel="stylesheet" href="{{ basepath }}/static/css/lessons.css">
 
-	<!-- TODO: GABI: WHY DO WE NEED THIS !!!!!!???? -->
+	<!-- TODO: WHY DO WE NEED THIS !!!!!!???? -->
+	<!-- TODO: @Gabriel Ivanica  -->
+
 	<style type="text/css">
 		@import url("{{ basepath }}/static/css/autocomplete.css");
 		{% if config_logo %}
@@ -82,7 +84,7 @@
 	<script type="text/javascript" src="{{ basepath }}/static/libs/bootstrap/js/bootstrap.js"></script>
 	<script type="text/javascript" src="{{ basepath }}/static/js/ajaxify.js"></script>
 	<script type="text/javascript" src="{{ basepath }}/static/js/script.js"></script>
-	<script type="text/javascript" src="{{ basepath }}/static/js/format.item.js"></script>
+	<!-- <script type="text/javascript" src="{{ basepath }}/static/js/format.item.js"></script> -->
 
 	<script type="text/javascript">
 		// TODO : BUG: must return JSON data from server
@@ -110,7 +112,8 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	{% block scripts %}{% endblock %}
+	{% block scripts %}
+	{% endblock %}
 
 </body>
 </html>
