[quiz] Populate tags data with existing values when editing a quiz

--- a/wouso/games/quiz/templates/quiz/cpanel/edit_quiz.html
+++ b/wouso/games/quiz/templates/quiz/cpanel/edit_quiz.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block sectioncontent %}
-    <form class="form-horizontal" method="post">
+    <form class="form-horizontal">
         {% for f in form %}
             {% if "tag_" not in f.name %}
                 <div class="form-group">
