lesson: Remove ending slash when including JavaScript file

--- a/wouso/interface/apps/lesson/templates/lesson/cpanel/edit_lesson.html
+++ b/wouso/interface/apps/lesson/templates/lesson/cpanel/edit_lesson.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block bottomscripts %}
-    <script type="text/javascript" src="{{ basepath }}/static/js/cpanel/lesson/lesson_tags.js/"></script>
+    <script type="text/javascript" src="{{ basepath }}/static/js/cpanel/lesson/lesson_tags.js"></script>
 {% endblock %}
 
 {% block sectioncontent %}
