--- a/wouso/interface/apps/lesson/templates/lesson/cpanel/add_lesson.html
+++ b/wouso/interface/apps/lesson/templates/lesson/cpanel/add_lesson.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block bottomscripts %}
-    <script type="text/javascript" src="{{ basepath }}/static/js/cpanel/lesson/lesson_tags.js/"></script>
+    <script type="text/javascript" src="{{ basepath }}/static/js/cpanel/lesson/lesson_tags.js"></script>
 {% endblock %}
 
 {% block sectioncontent %}
