--- a/wouso/resources/templates/splash.html
+++ b/wouso/resources/templates/splash.html
@@ -38,9 +38,9 @@
 	                </div>
 	                {% csrf_token %}
 	            </form>
-				<section class="help">
+				<div class="help">
 					Pentru probleme în accesarea platformei deschide un tichet pe <a href="http://support.learningpark.ro">site-ul de suport</a>.
-				</section>
+				</div>
 			</div>
 		</section>
 	</div>
