--- a/wouso/resources/templates/registration/login.html
+++ b/wouso/resources/templates/registration/login.html
@@ -1,53 +1,51 @@
-{% extends "interface/simple_base.html" %}
+{% extends "interface/section_base.html" %}
 {% load i18n %}
 
-{% block scripts %}
-<style>
-div#sidebar {
-    display: none
-}
-div#content {
-    float: none;
-    width: 930px;
-    min-height: 400px;
-}
-button {
-    float: right;
-}</style>
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ basepath }}/static/css/splash.css" />
 {% endblock %}
 
-{% block sidebar %}
+{% block sectiontitle %}
+	{% trans 'Authentication' %}
 {% endblock %}
 
-{% block content %}
-<div class="centered">
-{% if form.errors %}
-<p style="color:red">{% trans "Your username and password didn't match. Please try again." %}</p>
-{% endif %}
 
-<h2>{% trans 'Authentication' %}</h2>
-<form method="post" action="{% url wouso.interface.views.login_view %}">
-<table align=center>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-<tr><td colspan="2">
-<button type="submit">{% trans 'Enter' %}</button>
-</td></tr>
-</table>
+{% block sectioncontent %}
+<div>
+	<section class="row login-box">
+		<div class="col-md-3">
 
-{% comment "Do not use mobile interface" %}
-{% load url from future %}
-<a href="{% url 'social:begin' "clef"  %}">Log in with your Phone</a>
-{% endcomment %}
+		</div>
 
-<input type="hidden" name="next" value="{{ next }}" />
-{% csrf_token %}
-</form>
+		<div id="login" class="col-md-6">
+
+			{% if form.errors %}
+				<p class="text-danger error">
+					{% trans "Your username and password didn't match. Please try again." %}
+				</p>
+			{% endif %}
+
+	        <form action="{% url wouso.interface.views.login_view %}" method="post">
+	        	<div class="form-group">
+	                <label for="username">{% trans 'username' %}</label>
+	                <input type="text" class="form-control" name="username" id="username" placeholder="{% trans 'username' %}"/>
+	        	</div>
+	        	<div class="form-group">
+	                <label for="password">{% trans 'password' %}</label>
+	                <input type="password" class="form-control" name="password" id="password" placeholder="{% trans 'password' %}"/>
+				</div>
+	        	<div class="form-group submit">
+	            	<button type="submit" class="btn btn-success">{% trans 'login' %}</button>
+	            </div>
+	            {% csrf_token %}
+	        </form>
+			<section class="help">
+				Pentru probleme în accesarea platformei deschide un tichet pe <a href="http://support.learningpark.ro">site-ul de suport</a>.
+			</section>
+		</div>
+
+		<div class="col-md-3"></div>
+	</section>
+
 </div>
 {% endblock %}
