--- a/wouso/interface/apps/lesson/templates/lesson/index.html
+++ b/wouso/interface/apps/lesson/templates/lesson/index.html
@@ -2,25 +2,17 @@
 
 {% load i18n %}
 
-{% block title %}{% trans 'Lessons' %}{% endblock %}
-{% block sectiontitle %}{% trans 'Lessons' %}{% endblock %}
+{% block title %}{% trans 'Categories' %}{% endblock %}
+{% block sectiontitle %}{% trans 'Categories' %}{% endblock %}
 
 {% block sectioncontent %}
 
-{% if categories %}
     {% for c in categories %}
-        <h3>{{ c }}</h3>
-        {% for t in c.tags.all %}
-        <strong>{{ t }}</strong>
-            <ol>
-                {% for l in t.active_lessons %}
-                <li><a href="{% url lesson_view l.id %}">{{ l }}</a></li>
-                {% endfor %}
-            </ol>
-        {% endfor %}
+    <ul>
+        <h3><a href="{% url lesson_category_view c.id %}">{{ c }}</a></h3>
+    </ul>
+    {% empty %}
+        {% trans 'No lessons have been added.' %}
     {% endfor %}
-{% else %}
-    {% trans 'No lessons have been added.' %}
-{% endif %}
 
 {% endblock %}
