added message info to sidebar

--- a/wouso/resources/templates/interface/sidebar/sidebar.html
+++ b/wouso/resources/templates/interface/sidebar/sidebar.html
@@ -6,3 +6,4 @@
 {% include 'interface/sidebar/search.html' %}
 {% include 'interface/sidebar/progress.html' %}
 {% include 'interface/sidebar/leaderboard.html' %}
+{% include 'messaging/sidebar.html' %}
