--- a/wouso/games/quiz/templates/quiz/quiz.html
+++ b/wouso/games/quiz/templates/quiz/quiz.html
@@ -44,12 +44,13 @@
                 <div class="questions">
                     {% autoescape off %}
                     {{ field.label }}
+                    <br />
                     {% endautoescape %}
                     <ul class="answers">
                         {% for choice in field.field.choices %}
                             {% autoescape off %}
                             <li>
-                                <input type="radio" name="{{ field.html_name }}" value="{{ choice.0 }}" id="{{ field.html_name }}_{{ choice.0 }}" />
+                                <input type="radio" style="vertical-align: middle; margin: 8px;" name="{{ field.html_name }}" value="{{ choice.0 }}" id="{{ field.html_name }}_{{ choice.0 }}" />
                                 <label for="{{ field.html_name }}_{{ choice.0 }}">{{ choice.1 }}</label>
                             </li>
                             {% endautoescape %}
@@ -57,6 +58,9 @@
                     </ul>
                 </div>
             </li>
+            <br />
+            <br />
+            <br />
         {% endfor %}
     </ol>
     {% csrf_token %}
