--- a/wouso/resources/static/css/progress.css
+++ b/wouso/resources/static/css/progress.css
@@ -12,22 +12,10 @@
 	box-shadow: 0 0 25px rgba(0, 0, 0, 0.04);
 }
 
-#progress .info {
-	overflow: hidden;
-}
-
-#progress .progress {
-	width: 100%;
-	margin: 20px 0 0 0;
-	padding: 0;
-	position: relative;
-}
-
 #progress .xp-icon {
 	width: 32px;
 	height: 20px;
 	margin: 0 0 0 0;
-	/*background: #1CAFF6;*/
 	color: #FFF;
 	line-height: 20px;
 	text-align: center;
@@ -51,4 +39,41 @@
 	vertical-align: middle;
 	display: inline-block;
 	color: #FFA200;
+}
+
+#progress .progress {
+	width: 100%;
+	margin: 20px 0 0 0;
+	padding: 0;
+	position: relative;
+}
+
+#progress .xp-label {
+	width: 100%;
+	margin: 0 0 0 0;
+	color: #FFF;
+	line-height: 20px;
+	text-align: center;
+	font-weight: bold;
+
+	position: absolute;
+	left: 8px;
+}
+
+#progress .progress .level {
+	width: 32px;
+	background: rgba(200, 200, 200, 0.7);
+	color: #FFF;
+	text-align: center;
+	position: absolute;
+	font-weight: bold;
+	z-index: 0
+}
+
+#progress .progress .current-level {
+	left: 0;
+}
+
+#progress .progress .next-level {
+	right: 0;
 }
