--- a/wouso/resources/templates/interface/sidebar/progress.html
+++ b/wouso/resources/templates/interface/sidebar/progress.html
@@ -14,6 +14,8 @@
 				<img src="{% player_avatar player %}"/>
 			</div>
 			<div class="col-md-8">
+				<!-- TODO: @Gabriel Ivanica  -->
+				<!-- Do not generate HTML on server side for player -->
 				<h4 class="name">
 					{% player player %}
 				</h4>
@@ -28,12 +30,31 @@
 
 	<div class="progress row">
 		<div class="progress-bar progress-bar-warning active" role="progressbar"
-			aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+			aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
 			<span class="sr-only">60% Complete (warning)</span>
-			<span class="xp-icon">XP </span>
+			<span class="xp-label">XP </span>
+			<span class="current-level level">{{ player.level_no }} </span>
+			<span class="next-level level">{{ player.level_progress.next_level }}</span>
 		</div>
 	</div>
 </div>
+
+	<script type="text/javascript">
+		// console.log({{ player.level_progress.percent }});
+		// console.log({{ player.level_progress.next_level }});
+		// console.log({{ player.level_progress.points_left }});
+		// console.log({{ player.level_progress.points_gained }});
+
+		var gain = parseInt({{ player.level_progress.points_gained }});
+		var left = parseInt({{ player.level_progress.points_left }});
+		var percentage = ((gain * 100) / (gain + left)).toFixed(0);
+		window.addEventListener('load', function(){
+			var progress = document.querySelector('#progress .progress-bar');
+			progress.style.width = percentage + '%';
+			progress.setAttribute('aria-valuenow', percentage);
+		});
+	</script>
+
 {% endif %}
 
 
