--- a/wouso/games/quiz/templates/quiz/quiz.html
+++ b/wouso/games/quiz/templates/quiz/quiz.html
@@ -10,7 +10,7 @@
 {% block sectioncontent %}
 
 <div id="timer" class="timer">
-	{{ seconds_left }}  {% trans 'seconds' %}
+	time left
 </div>
 
 <form action="{% url quiz_view quiz.id %}" method="post" id="quiz_form" class="quiz">
