Fix bad lesson breadcrumb

--- a/wouso/interface/apps/lesson/templates/lesson/cpanel/manage_categories.html
+++ b/wouso/interface/apps/lesson/templates/lesson/cpanel/manage_categories.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb "Manage categories" "manage_categories" %}
+    {% breadcrumb "Manage categories" "manage_lesson_categories" %}
 {% endblock %}
 
 {% block sectioncontent %}
