Discern files url

--- a/wouso/interface/apps/files/templates/files/cpanel/list_files.html
+++ b/wouso/interface/apps/files/templates/files/cpanel/list_files.html
@@ -9,7 +9,7 @@
         <a class="btn btn-primary" href="{% url add_file %}">
             <span class="glyphicon glyphicon-plus"></span>{% trans 'Upload file' %}
         </a>
-            <a class="btn btn-success" href="{% url manage_categories %}">
+            <a class="btn btn-success" href="{% url manage_file_categories %}">
             <span class="glyphicon glyphicon-edit"></span>{% trans 'Manage categories' %}
         </a>
     </div>
