--- a/wouso/interface/apps/lesson/templates/lesson/cpanel/manage_categories.html
+++ b/wouso/interface/apps/lesson/templates/lesson/cpanel/manage_categories.html
@@ -2,6 +2,15 @@
 {% load i18n %}
 {% load django_bootstrap_breadcrumbs %}
 
+{% block sectiontitle %}
+    Manage categories
+    <div class="pull-right">
+        <a class="btn btn-primary" href="{% url add_lesson_category %}">
+            <span class="glyphicon glyphicon-plus"></span>{% trans 'Add category' %}
+        </a>
+    </div>
+{% endblock %}
+
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb "Manage categories" "manage_lesson_categories" %}
