--- a/wouso/resources/templates/interface/header.html
+++ b/wouso/resources/templates/interface/header.html
@@ -31,13 +31,14 @@
 				</ul>
 				<form class="form-inline navbar-form navbar-right">
 					{% if user.is_authenticated %}
-						{% if user.real_user %}
-							Impersonated by {{ user.real_user }} <a href="{% url impersonate_clear %}">clear</a>
-						{% endif %}
-						<a class="btn" href="{% url logout_view %}" onclick="remove_storage()">{% trans "Logout" %} &raquo;</a>
+						<a class="btn" href="{% url logout_view %}" onclick="remove_storage()">
+							{% trans "Logout" %}
+							<span class="glyphicon glyphicon-chevron-right"></span>
+						</a>
 					{% else %}
-					{% trans 'Anonymous' %}
-					<a class="btn" href="{% url login_view %}">{% trans "Login" %} &raquo;</a>
+						<a class="btn" href="{% url login_view %}">
+							{% trans "Login" %}
+						</a>
 					{% endif %}
 				</form>
 			</div>
