--- a/wouso/resources/static/css/site.css
+++ b/wouso/resources/static/css/site.css
@@ -17,6 +17,15 @@ h1,h2,h3,h4,h5,h6 {
 	outline: none;
 }
 
+.center-action-button {
+	width: 100px;
+	margin: 0 auto;
+}
+
+.bg-message p {
+	padding: 15px;
+}
+
 /*
  * SEARCH BAR
  */
@@ -124,63 +133,161 @@ h1,h2,h3,h4,h5,h6 {
 	color: red;
 }
 
-.quiz {
-	padding: 20px 0;
-	border: 1px solid #EEE;
+
+#quiz-list {
+
 }
 
-.quiz ol {
+#quiz-list .type {
+	padding: 20px 0 10px 0;
+	border-bottom: 1px solid #EEE;
+}
+
+#quiz-list .quiz {
+	width: 100%;
+}
+
+#quiz-list .quiz .title {
+	margin: 0;
+	padding: 10px 10px 10px 20px;
+	background: #F5F5F5;
+	color: #555;
+	overflow: hidden;
+
+
+	  -webkit-user-select: none;  /* Chrome all / Safari all */
+	  -moz-user-select: none;     /* Firefox all */
+	  -ms-user-select: none;      /* IE 10+ */
+	  -o-user-select: none;
+	  user-select: none;
+}
+
+#quiz-list .quiz .title:hover {
+	background: #EEE;
+	cursor: pointer;
+}
+
+#quiz-list .quiz .title small {
+	width: 90px;
+	margin-right: 10px;
+	text-align: right;
+	display: inline-block;
+	cursor: default;
+}
+
+#quiz-list .quiz .title small .glyphicon {
+	color: #5092F0;
+}
+
+#quiz-list .quiz .start-quiz {
+	padding: 2px 10px;
+	font-size: 0.75em;
+	color: #C60;
+	float: right;
+}
+
+#quiz-list .score {
+	padding: 0 10px;
+	overflow: hidden;
+	transition: all 0.25s ease-out;
+}
+
+#quiz-list .score .score-box {
+	width: 50%;
+	height: 0;
+	padding: 0 10px;
+	overflow: hidden;
+	float: left;
+	transition: all 0.25s ease-out;
+}
+
+@media all and (max-width: 991px) {
+	#quiz-list .score .score-box {
+		width: 100%;
+	}
+}
+
+#quiz-list .score .score-box .glyphicon {
+	margin: 0 10px 0 50px;
+	font-size: 1.5em;
+}
+
+#quiz-list .score[data-visible] {
+	padding: 10px;
+}
+
+#quiz-list .score[data-visible] .score-box {
+	height: 60px;
+}
+
+#quiz-list .score[data-visible] .score-box.small {
+	height: 20px;
+}
+
+#quiz-list .date {
+	line-height: 1.5em;
+}
+
+#quiz-list .date .glyphicon {
+	color: #FFC741;
+}
+
+#quiz-list .points .glyphicon {
+	color: #5092F0;
+}
+
+
+/*
+ * Quiz Page
+ */
+
+#quiz-form {
+	padding: 20px 0;
+}
+
+#quiz-form ol {
 	margin: 0;
 }
 
-.quiz ol li {
+#quiz-form ol li {
 	font-size: 1.2em;
 	color: #333;
 }
 
-.quiz .question {
+#quiz-form .question {
 	margin: 10px 0 10px -40px;
 	padding: 10px 5px 10px 40px;
 	background: #EEE;
 	color: #333;
 }
 
-.quiz .answers {
+#quiz-form .answers {
 	background: #FFF;
 }
 
-.quiz .radio label {
+#quiz-form .radio label {
 	width: 100%;
 	margin: 0 0 0 -20px;
 	padding: 5px 10px 5px 30px;
 	border-radius: 5px;
 }
 
-.quiz .radio label:hover {
+#quiz-form .radio label:hover {
 	background: #F5F5F5;
 }
 
-.quiz .actions {
+#quiz-form .actions {
 	width: 100px;
 	margin: 0 auto;
 }
 
-.quiz button {
+#quiz-form button {
 	width: 100%;
 }
 
-.quiz-answer .result-message {
+#quiz-form-answer .result-message {
 	margin: 50px 0;
 	text-align: center;
-}
-
-.center-action-button {
-	width: 100px;
-	margin: 0 auto;
-}
-
-.bg-message p {
-	padding: 15px;
 }
 
 /*
